# scrapy

./: .coverage  README.md
ai-web-scraper/: .env.example  .env.secure.example  .env.security.template  .env.template  .env.test.example  .gitignore  DEPENDENCY_ANALYSIS.md  DEPENDENCY_SUMMARY.md  DEPLOYMENT.md  Dockerfile  MIGRATION_GUIDE.md  Makefile  Procfile  README.md  SCHEMA_VALIDATION_REPORT.md  SECURITY.md  SECURITY_ANALYSIS_JOB_QUEUE.md  SECURITY_AUDIT_REPORT.md  SECURITY_AUDIT_SUMMARY.md  SECURITY_CONFIGURATION_GUIDE.md  SECURITY_FIXES_SUMMARY.md  SECURITY_RECOMMENDATIONS.md  SECURITY_REVIEW_SUMMARY.md  SECURITY_SETUP.md  SECURITY_VULNERABILITY_REPORT.md  SETUP_INSTRUCTIONS.md  VALIDATION_SUMMARY.md  alembic.ini  app.yaml  docker-compose.yml  main.py  nginx.conf  pyproject.toml  requirements.txt  run.py  run_dashboard.py  run_system.py  setup.py  test_scraper.py  validate_error_handling.py
ai-web-scraper/alembic/: env.py
ai-web-scraper/config/: __init__.py  database.py  secure_database.py  security.py  security_recommendations.md  security_validator.py  settings.py
ai-web-scraper/docs/: GITHUB_SECRETS_SETUP.md  SECURITY.md  SECURITY_GUIDE.md  data_cleaning_guide.md  task_queue_guide.md
ai-web-scraper/examples/: advanced_scraping_demo.py  data_cleaning_example.py  task_queue_example.py
ai-web-scraper/scripts/: generate_secure_keys.py  generate_type_hints.py  run_all_validations.py  security_audit.py  security_check.py  validate_schemas.py  validate_security.py
ai-web-scraper/src/: __init__.py  database.py
ai-web-scraper/src/api/: main.py  (+2 more)
ai-web-scraper/tests/: README.md  __init__.py  conftest.py  run_basic_tests.py  run_comprehensive_tests.py  test_ai_confidence_scorer.py  test_ai_content_processor.py  test_ai_structure_extractor.py  test_ai_text_analyzer.py  test_cleaner.py  test_error_handling.py  test_export_formats.py  test_export_manager.py  test_job_queue.py  test_models.py  test_monitor.py  test_repository.py  test_repository_integration.py  test_sample_data.py  test_worker.py
(+103 files in other folders)
