[project]
name = "ai-web-scraper"
version = "0.1.0"
description = "An enterprise-grade intelligent web scraping system with AI processing capabilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=23.2.1",
    "aiohttp>=3.9.5",
    "aiosqlite>=0.19.0",
    "beautifulsoup4>=4.12.0",
    "bleach>=6.1.0",
    "fastapi>=0.109.0",
    "google-generativeai>=0.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "passlib[bcrypt]>=1.7.4",
    "plotly>=5.17.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.4",
    "requests>=2.32.0",
    "selenium>=4.15.0",
    "sqlalchemy>=2.0.25",
    "streamlit>=1.28.0",
    "structlog>=23.2.0",
    "uvicorn[standard]>=0.27.0",
    # Security enhancements
    "cryptography>=41.0.0",
    "certifi>=2023.7.22",
    "urllib3>=2.0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]
