[project]
name = "ai-web-scraper"
version = "0.1.0"
description = "Simple AI-powered web scraper with dashboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.109.0",
    "google-generativeai>=0.3.0",
    "pandas>=2.0.0",
    "plotly>=6.3.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "sqlalchemy>=2.0.25",
    "streamlit>=1.28.0",
    "uvicorn[standard]>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
scraper = "main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.0.0",
]
